Updated bower.json and the program now runs successfully

--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,22 @@
 {
-  "name": "test",
-  "version": "1.0.0",
-  "moduleType": [
-    "node"
+  "name": "ScalaCheckBookExamplesInPureScript",
+  "version": "0.0.0",
+  "authors": [
+    "Jonathan Taylor"
   ],
+  "description": "Port of the examples in the ScalaCheck book to PureScript",
+  "main": "Main.purs",
+  "private": true,
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
-    "output"
+    "test",
+    "tests"
   ],
   "dependencies": {
-    "purescript-console": "^0.1.0",
-    "purescript-quickcheck": "~0.7.0"
+    "purescript-quickcheck": "~0.7.0",
+    "purescript-tuples": "~0.4.0",
+    "purescript-functions": "~0.1.0"
   }
 }
